AC-39 Админ панель для Cluster

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -2,8 +2,9 @@ multiple: Multiple
 single: Single
 online: Online
 offline: Offline
-enabled: Активный
+enabled: Enabled
 host: Host
 type: Type
 status: Status
 created_at: Created at
+name: Name
