--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -6,5 +6,8 @@ offline: Offline
 enabled: Enabled
 host: Площадка
 type: Тип
-status: Статус
+status: Состояние
 created_at: Создано:
+check_status: Проверить состояние
+cluster: Кластер
+name: Имя
