--- a/src/Araneum/Bundle/MainBundle/Resources/translations/validators.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/validators.en.yml
@@ -1,3 +1,4 @@
-name.too.short: Name too short
-name.too.long: Name too long
-this.value.should.be.a.type: This value should be a type
+name_too_short: Name too short
+name_too_long: Name too long
+this_value_should_be_a_type: This value should be a type
+check_status: Check status
