--- a/src/Araneum/Bundle/MainBundle/Resources/translations/validators.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/validators.ru.yml
@@ -1,3 +1,3 @@
-name.too.short: Слишком короткое имя
-name.too.long: Слишком длинное имя
-this.value.should.be.a.type: Значение должно быть типа
+name_too_short: Слишком короткое имя
+name_too_long: Слишком длинное имя
+this_value_should_be_a_type: Значение должно быть типа
