--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -7,3 +7,5 @@ createdAt: Created at
 date_range_start: From
 date_range_end: To
 actions: Actions
+left_to_right: Left to right
+right_to_left: Right to left
