--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -7,3 +7,5 @@ createdAt: Создано
 date_range_start: От
 date_range_end: До
 actions: Действия
+left_to_right: Слева направо
+right_to_left: Справа налево
