AC-59 Форма редактирования профиля пользователя + Форма редактирования + Валидация + Сброс пароля + Переводы + Шаблон + Выход (Logout) + Перенос языков в другой блок

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -9,3 +9,8 @@ date_range_end: To
 actions: Actions
 left_to_right: Left to right
 right_to_left: Right to left
+edit_profile: Edit profile
+btn_pass_restore: Forgot password?
+flash_edit_success: Profile changed
+profile: Profile
+logout: Logout
