--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -9,3 +9,8 @@ date_range_end: До
 actions: Действия
 left_to_right: Слева направо
 right_to_left: Справа налево
+edit_profile: Редактирование профиля
+btn_pass_restore: Забыли пароль?
+flash_edit_success: Профиль изменен
+profile: Профиль
+logout: Выход
