--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -11,3 +11,8 @@ check_status: Check status
 cluster: Cluster
 name: Name
 core: Core
+description: Description
+default: Default
+actions: Actions
+date_range_start: From
+date_range_end: To
