--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -6,8 +6,13 @@ enabled: Активный
 host: Площадка
 type: Тип
 status: Состояние
-created_at: Создано:
+created_at: Создано
 check_status: Проверить состояние
 cluster: Кластер
 name: Имя
 core: Ядро
+description: Описание
+default: По умолчанию
+actions: Действия
+date_range_start: С
+date_range_end: По
