--- a/src/Araneum/Bundle/MainBundle/Resources/translations/validators.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/validators.en.yml
@@ -1,1 +1,6 @@
 incorrect_locale_format: Incorrect locale format. Recommended format en_US
+application_name_empty: Application name can not be empty
+application_name_length: Length of application name should be in range of 2 to 255 characters
+application_domain_not_valid_url: This value is not a valid domain
+application_template_empty: Application template can not be empty
+application_template_length: Length of template name should be in range of 2 to 255 characters
