--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -32,3 +32,20 @@ btn_pass_restore: Forgot password?
 flash_edit_success: Profile changed
 profile: Profile
 logout: Logout
+right_to_left: Right to left,
+cluster: Cluster
+type: Type
+domain: Domain
+database: Database
+public: Public
+owner: Owner
+status: Status
+template: Template
+created_at: Created At
+undefined: Undefined
+online: Online
+offline: Offline
+aliases: Aliases
+alias: Alias
+components: Components
+application: Application
