fix after review

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -39,3 +39,5 @@ profile: Профиль
 logout: Выход
 online: Online
 offline: Offline
+check_status: Check status
+test_connection: Проверить соединение
