AC-62 Кастомизировать страницу логина

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
@@ -13,3 +13,5 @@ last_login: Последний логин
 actions: Дейстия
 date_range_start: С
 date_range_end: До
+remember_me: Запомнить меня
+sign_in: Войти
