AC-76 Настроить и кастомизировать сброс пароля пользователя / Need to configure and customize the...

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/messages.en.yml
@@ -11,3 +11,6 @@ created_at: Created
 updated_at: Updated
 last_login: Last login
 actions: Actions
+type_username_or_email: Type username or Email
+username_or_email: Username or Email
+sign_in: Sign in
