--- a/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
@@ -13,3 +13,6 @@ last_login: Последний логин
 actions: Дейстия
 date_range_start: С
 date_range_end: До
+type_username_or_email: Введите логин или Email
+username_or_email: Логин или Email
+sign_in: Войти
