--- a/src/Araneum/Bundle/UserBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/messages.en.yml
@@ -12,6 +12,8 @@ updated_at: Updated
 last_login: Last login
 actions: Actions
 remember_me: Remember me
+date_range_start: С
+date_range_end: До
 sign_in: Sign in
 to: to
 field_required: Fild required
