--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -41,3 +41,10 @@ online: Online
 offline: Offline
 check_status: Check status
 test_connection: Проверить соединение
+domain: Домен
+aliases: Алиасы
+public: Публичный
+template: Шаблон
+database: База данных
+components: Компоненты
+id: ID
