AC-119 Create API (GET) method which will return list of cluster projects

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.en.yml
@@ -19,7 +19,7 @@ host: Host
 db_connection: DB connection
 host_connection: Host connection
 connection: Connection
-locale: Locale
+locales: Locales
 orientation: Orientation
 encoding: Encoding
 left_to_right: Left to right
