AC-105 A list of incorrect translations and other UI items. Translates

--- a/src/Araneum/Bundle/CustomerBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/CustomerBundle/Resources/translations/messages.ru.yml
@@ -4,7 +4,7 @@ country: Страна
 email: E-mail
 phone: Телефон
 callback: Перезвонить
-created_at: Создана
+created_at: Создано
 delivered_at: Доставлено
 application: Приложение
 id: ID
