--- a/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/messages.ru.yml
@@ -10,7 +10,7 @@ password: Пароль
 created_at: Создано
 updated_at: Обновлено
 last_login: Последний логин
-actions: Дейстия
+actions: Действия
 remember_me: Запомнить меня
 date_range_start: С
 date_range_end: До
