--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -9,7 +9,7 @@ password: Пароль
 created_at: Создано
 updated_at: Обновлено
 last_login: Последний логин
-actions: Дейстия
+actions: Действия
 date_range_start: С
 date_range_end: До
 name: Имя
