AC-41 Service for check status of Aplication

--- a/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/translations/messages.ru.yml
@@ -50,3 +50,5 @@ components: Компоненты
 id: ID
 owner: Владелец
 applications: Приложения
+use_ssl: Использовать SSL
+has_problems: Имеются проблемы
