AC-163 Translate dashboard

--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -41,7 +41,7 @@ sidebar:
         MANAGER: "Управление сайтами"
         RECEIVED: "Полученные данные"
     nav:
-        DASHBOARD: "Рабочий стол"
+        DASHBOARD: "Панель администратора"
         USERS: "Пользователи"
         manager:
             CLUSTER: "Кластер"
