AC-163 Translate dashboard

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -1,11 +1,19 @@
 dashboard :
     WELCOME: "Welcome to Site manager"
     DASHBOARD: "Dashboard"
-    aoolication:
+    application:
         APPLICATION: "application"
         ONLINE: "Online"
         PROBLEM: "Problem"
         ERROR: "Error"
+    wiget:
+        APPLICATION_STATUSES: "Statuses for last 24 hour by applications"
+        AVERAGE_APPLICATION_STATUSES: "Average application statuses by last 24 hours"
+        CLUSTER_LOAD_AVERAGE: "Cluster load average by last 24 hours"
+        CLUSTER_UP_TIME: "Clusters UpTime by last 24 hours"
+        CUSTOMERS_REGISTRATION: "Customers registration received from applications (24 hours)"
+        EMAIL_RECIEVED: "Email received from applications (24 hours)"
+        RECEIVED_FROM_APPLICATION: "Received from all applications"
 topbar:
     messages:
         UNREAD: "Unread messages"
