--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -1,17 +1,27 @@
 dashboard :
     WELCOME: "Добро пожаловать в систему управления сайтом"
-    DASHBOARD: "Рабоичий стол"
+    DASHBOARD: "Панель администратора"
     application:
         APPLICATION: "Приложение"
         ONLINE: "Online"
         PROBLEM: "Проблема"
         ERROR: "Ошибка"
+    wiget:
+        APPLICATION_STATUSES: "Статусы приложений за 24 часа"
+        AVERAGE_APPLICATION_STATUSES: "Усредненные показатели состояний приложений за 24 часа"
+        CLUSTER_LOAD_AVERAGE: "Усредненная нагрузка по кластерам за 24 часа"
+        CLUSTER_UP_TIME: "Время непрерырвной работы за 24 часа"
+        CUSTOMERS_REGISTRATION: "Заявки на регистрацию от клиентов за последние 24 часа"
+        EMAIL_RECIEVED: "Сообщений принято от приложений за 24 часа"
+        RECEIVED_FROM_APPLICATION: "Принято ото всех приложений"
+        CUSTOMERS: "клиентов"
+        EMAILS: "сообщений"
 topbar:
     messages:
         UNREAD: "Непрочтенных сообщений"
         MORE: "Больше сообщений"
     search:
-        PLACEHOLDER: "Наберите и нажмите на клавишу Ввод.."
+        PLACEHOLDER: "Наберите и нажмите на клавишу Ввод"
     notification:
         MORE: "Больше уведомлений"
 offsidebar:
