AC-154 Need to make these fields mandatory in AC-85

--- a/src/Araneum/Bundle/AgentBundle/Resources/translations/messages.ru.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/translations/messages.ru.yml
@@ -3,6 +3,7 @@ last_name: Фамилия
 country: Страна
 email: E-mail
 phone: Телефон
+currency: Валюта
 callback: Перезвонить
 created_at: Создано
 delivered_at: Доставлено
