AC-166 Create grid mechanism for Locale and show Locale grid in admin panel

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -51,6 +51,7 @@ sidebar:
     nav:
         DASHBOARD: "Dashboard"
         USERS: "Users"
+        LOCALES: "Locales"
         manager:
             CLUSTER: "Clusters"
             APPLICATION: "Applications"
