--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -53,6 +53,7 @@ sidebar:
     nav:
         DASHBOARD: "Панель администратора"
         USERS: "Пользователи"
+        LOCALES: "Локали"
         manager:
             CLUSTER: "Кластер"
             APPLICATION: "Приложения"
