AC-232 Add russian language(instead of Spanish)

--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -2,20 +2,26 @@ dashboard :
     WELCOME: "Добро пожаловать в систему управления сайтом"
     DASHBOARD: "Панель администратора"
     application:
-        APPLICATION: "Приложение"
+        APPLICATION: "Сайт"
         ONLINE: "Online"
         PROBLEM: "Проблема"
         ERROR: "Ошибка"
+        DISABLED: "Выключен"
     wiget:
         APPLICATION_STATUSES: "Статусы приложений за 24 часа"
         AVERAGE_APPLICATION_STATUSES: "Усредненные показатели состояний приложений за 24 часа"
         CLUSTER_LOAD_AVERAGE: "Усредненная нагрузка по кластерам за 24 часа"
         CLUSTER_UP_TIME: "Время непрерырвной работы за 24 часа"
         CUSTOMERS_REGISTRATION: "Заявки на регистрацию от клиентов за последние 24 часа"
-        EMAIL_RECIEVED: "Сообщений принято от приложений за 24 часа"
+        EMAIL_RECIEVED: "Сообщений принято от сайтов за 24 часа"
         RECEIVED_FROM_APPLICATION: "Принято ото всех приложений"
-        CUSTOMERS: "клиентов"
+        CUSTOMERS: "Клиентов"
         EMAILS: "сообщений"
+        APPLICATIONS: "Сайтов"
+        ADMINS: "Администраторов"
+        CONNECTIONS: "Соединений"
+        CLUSTERS: "Кластеров"
+        LOCALES: "Локалей"
 topbar:
     messages:
         UNREAD: "Непрочтенных сообщений"
