AC-232 Add russian language(instead of Spanish)

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -79,6 +79,7 @@ general:
     ENABLED: 'Enabled'
     DISABLED: 'Disabled'
     DATA_LIST: 'Data list'
+    RESET: 'Reset'
 datatables:
     PROCESSING: 'Processing...'
     SEARCH: 'Search:'
