AC-232 Add russian language(instead of Spanish)

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -80,6 +80,11 @@ general:
     DISABLED: 'Disabled'
     DATA_LIST: 'Data list'
     RESET: 'Reset'
+    EDIT: 'Edit'
+    ACTIONS: 'Actions'
+    DELETE: 'Delete'
+    ENABLE: 'Enable'
+    DISABLE: 'Disable'
 datatables:
     PROCESSING: 'Processing...'
     SEARCH: 'Search:'
