--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -9,3 +9,4 @@ CONFIRM_AS_PASSWORD: 'Поля пароль и подтверждение пар
 SIGN_IN_TO_CONTINUE: 'Необходима авторизация'
 REMEMBER_ME: 'Запомнить меня'
 FORGOT_YOU_PASSWORD: 'Забыли пароль?'
+OPEN_PROFILE: 'Открыть профиль'
