AC-232 Add russian language(instead of Spanish)

--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -53,7 +53,7 @@ offsidebar:
 sidebar:
     WELCOME: "Добро пожаловать"
     heading:
-        HEADER: "Главное окно"
+        HEADER: "Главное меню"
         MANAGER: "Управление сайтами"
         RECEIVED: "Полученные данные"
     nav:
