AC-232 Add russian language(instead of Spanish)

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -22,6 +22,9 @@ dashboard :
         CONNECTIONS: "Connections"
         CLUSTERS: "Clusters"
         LOCALES: "Locales"
+        COLLAPSE: "Collapse panel"
+        REFRESH: "Refresh panel"
+        CLOSE: "Close panel"
 topbar:
     messages:
         UNREAD: "Unread messages"
