AC-232 Add russian language(instead of Spanish)

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -10,3 +10,4 @@ SIGN_IN_TO_CONTINUE: 'SIGN IN TO CONTINUE'
 REMEMBER_ME: 'Remember me'
 FORGOT_YOU_PASSWORD: 'Forgot your password?'
 OPEN_PROFILE: 'Open profile'
+LOGOUT: 'Logout'
