--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -10,3 +10,4 @@ SIGN_IN_TO_CONTINUE: 'Необходима авторизация'
 REMEMBER_ME: 'Запомнить меня'
 FORGOT_YOU_PASSWORD: 'Забыли пароль?'
 OPEN_PROFILE: 'Открыть профиль'
+LOGOUT: 'Выйти'
