AC-233 Import from site User grid

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -77,7 +77,7 @@ general:
     CANCEL: 'Cancel'
     FILTERS: 'Filter'
     LABEL_FOCUS: 'Label focus'
-    SELECT: 'Выберите'
+    SELECT: 'Select'
     SEARCH: 'Search'
     ENABLED: 'Enabled'
     DISABLED: 'Disabled'
