AC-228 Create actions for Locale grid

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -88,6 +88,8 @@ general:
     DELETE: 'Delete'
     ENABLE: 'Enable'
     DISABLE: 'Disable'
+    SURE: 'Are you sure?'
+    CONFIRM_DELETE: 'Yes, delete it'
 datatables:
     PROCESSING: 'Processing...'
     SEARCH: 'Search:'
