AC-233 Import from site User grid

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -15,3 +15,4 @@ ENTER_EMAIL: 'Введите email пользователя'
 ENTER_FULLNAME: 'Введите полное имя'
 ROLE: 'Роль'
 LAST_LOGIN: 'Последний удачный вход'
+REGISTER: 'Зарегистрирован'
