--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -7,7 +7,7 @@ dashboard :
         PROBLEM: "Problem"
         ERROR: "Error"
         DISABLED: "Disabled"
-    wiget:
+    widget:
         APPLICATION_STATUSES: "Statuses for last 24 hour by applications"
         AVERAGE_APPLICATION_STATUSES: "Average application statuses by last 24 hours"
         CLUSTER_LOAD_AVERAGE: "Cluster load average by last 24 hours"
@@ -15,6 +15,7 @@ dashboard :
         CUSTOMERS_REGISTRATION: "Customers registration received from applications (24 hours)"
         EMAIL_RECIEVED: "Email received from applications (24 hours)"
         RECEIVED_FROM_APPLICATION: "Received from all applications"
+        ERRORS_RECEIVED_FROM_APPS_24HOURS: "Errors received from applications (24 hours)"
         CUSTOMERS: "Customers"
         EMAILS: "messages"
         APPLICATIONS: "Applications"
@@ -25,6 +26,9 @@ dashboard :
         COLLAPSE: "Collapse panel"
         REFRESH: "Refresh panel"
         CLOSE: "Close panel"
+        LEADS: "leads"
+        ERRORS: "errors"
+        CHART_IS_NOT_AVAILABLE: "This chart is not available"
 topbar:
     messages:
         UNREAD: "Unread messages"
