AC-234 Lead chart widget

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -15,7 +15,8 @@ dashboard :
         CUSTOMERS_REGISTRATION: "Customers registration received from applications (24 hours)"
         EMAIL_RECIEVED: "Email received from applications (24 hours)"
         RECEIVED_FROM_APPLICATION: "Received from all applications"
-        ERRORS_RECEIVED_FROM_APPS_24HOURS: "Errors received from applications (24 hours)"
+        REGISTERED_LEADS_FROM_APPS_24H: "Leads registration received from applications (24 hours)"
+        ERRORS_RECEIVED_FROM_APPS_24H: "Errors received from applications (24 hours)"
         CUSTOMERS: "Customers"
         EMAILS: "messages"
         APPLICATIONS: "Applications"
