--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -15,7 +15,8 @@ dashboard :
         CUSTOMERS_REGISTRATION: "Заявки на регистрацию от клиентов за последние 24 часа"
         EMAIL_RECIEVED: "Сообщений принято от сайтов за 24 часа"
         RECEIVED_FROM_APPLICATION: "Принято ото всех приложений"
-        ERRORS_RECEIVED_FROM_APPS_24HOURS: "Ошибки, полученные от приложений (24 часа)"
+        REGISTERED_LEADS_FROM_APPS_24H: "Регистация лидов принятых ото всех приложений (24 часа)"
+        ERRORS_RECEIVED_FROM_APPS_24H: "Ошибки, полученные от приложений (24 часа)"
         CUSTOMERS: "Клиентов"
         EMAILS: "сообщений"
         APPLICATIONS: "Сайтов"
