--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -13,7 +13,7 @@ dashboard :
         CLUSTER_LOAD_AVERAGE: "Усредненная нагрузка по кластерам за 24 часа"
         CLUSTER_UP_TIME: "Время непрерырвной работы за 24 часа"
         CUSTOMERS_REGISTRATION: "Заявки на регистрацию от клиентов за последние 24 часа"
-        EMAIL_RECIEVED: "Сообщений принято от сайтов за 24 часа"
+        RECEIVED_EMAILS_FROM_APPS_24H: "Сообщений принято от сайтов за 24 часа"
         RECEIVED_FROM_APPLICATION: "Принято ото всех приложений"
         REGISTERED_LEADS_FROM_APPS_24H: "Регистация лидов принятых ото всех приложений (24 часа)"
         ERRORS_RECEIVED_FROM_APPS_24H: "Ошибки, полученные от приложений (24 часа)"
