AC-278 Need to fix translation on resetting page

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -13,6 +13,8 @@ OPEN_PROFILE: 'Open profile'
 LOGOUT: 'Logout'
 ENTER_EMAIL: 'Enter email user'
 ENTER_FULLNAME: 'Enter full name'
+ENTER_YOUR_PASSWD: 'Enter your password'
+ENTER_YOUR_NAME_OR_EMAIL: 'Enter your name or email'
 ROLE: 'Role'
 LAST_LOGIN: 'Last login'
 REGISTER: 'Register'
