--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -13,6 +13,8 @@ OPEN_PROFILE: 'Открыть профиль'
 LOGOUT: 'Выйти'
 ENTER_EMAIL: 'Введите email пользователя'
 ENTER_FULLNAME: 'Введите полное имя'
+ENTER_YOUR_PASSWD: 'Введите свой пароль'
+ENTER_YOUR_NAME_OR_EMAIL: 'Введите свой логин или email'
 ROLE: 'Роль'
 LAST_LOGIN: 'Последний удачный вход'
 REGISTER: 'Зарегистрирован'
