--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -95,6 +95,7 @@ general:
     DISABLE: 'Выключить'
     SURE: 'Вы уверены?'
     CONFIRM_DELETE: 'Да, удалите это'
+    CURRENT_URL_NOT_VALID: 'Текущий URL больше недоступен'
 datatables:
     PROCESSING: 'Подождите...'
     SEARCH: 'Поиск:'
