AC-261 Need to make correct translation to Russian language for applications status

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -2,6 +2,7 @@ dashboard :
     WELCOME: "Welcome to Site manager"
     DASHBOARD: "Dashboard"
     application:
+        DECLENSION: "['application','applications']"
         APPLICATION: "application"
         ONLINE: "Online"
         PROBLEM: "Problem"
