AC-230 add update and languages
fixed  transtations

--- a/app/Resources/translations/admin.ru.yml
+++ b/app/Resources/translations/admin.ru.yml
@@ -110,7 +110,7 @@ datatables:
     EMPTY_TABLE: 'В таблице отсутствуют данные'
     paginate:
       FIRST: 'Первая'
-      PREVIUOS: 'Предыдущая'
+      PREVIOUS: 'Предыдущая'
       NEXT: 'Следующая'
       LAST: 'Последняя'
     aria:
