--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -110,7 +110,7 @@ datatables:
     EMPTY_TABLE: 'No data available in table'
     paginate:
       FIRST: 'First'
-      PREVIUOS: 'Previous'
+      PREVIOUS: 'Previous'
       NEXT: 'Next'
       LAST: 'Last'
     aria:
