AC-264 Need to add actions to page "Users" from page "Locales"

--- a/src/Araneum/Bundle/UserBundle/Resources/translations/users.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/users.en.yml
@@ -9,7 +9,7 @@ ENABLED: "Enabled"
 ENCODING: "Encoding"
 USER: "User"
 ORIENTATION: "Orientation"
-PLACEHOLDER: "Entre user name"
+PLACEHOLDER: "Enter user name"
 EMPTY_VALUE: "Choose"
 ENTER_ENCODING: "Enter encoding"
 ENTER_USER: "Enter user"
