--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -29,7 +29,9 @@ DATA_GRID:
     NAME: "Имя"
     FULL_NAME: "Полное имя"
     EMAIL: "Email"
-    PASSWORD: "Пароль"
+    PASSWORD: "Введите пароль"
+    PASSWORD_REPEAT: "Введите пароль еще раз"
+    PASSWORD_PLACEHOLDER: "Поле для пароля"
     ENABLED: "Активно"
     ROLES: "Роль"
     ENCODING: "Кодировка"
@@ -39,3 +41,5 @@ DATA_GRID:
     EMPTY_VALUE: "Выберите"
     ENTER_ENCODING: "Введите кодировку"
     ENTER_USER: "Введите пользователя"
+    ROLES: "Права пользователя"
+    SELECT_ROLES: "Выберите права для пользователя"
