--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -30,6 +30,8 @@ DATA_GRID:
     FULL_NAME: "Full name"
     EMAIL: "Email"
     PASSWORD: "Password"
+    PASSWORD_REPEAT: "Repeat password"
+    PASSWORD_PLACEHOLDER: "Type password here"
     ROLES: "Role"
     ENABLED: "Enabled"
     ENCODING: "Encoding"
@@ -39,3 +41,5 @@ DATA_GRID:
     EMPTY_VALUE: "Choose"
     ENTER_ENCODING: "Enter encoding"
     ENTER_USER: "Enter user"
+    ROLES: "User role"
+    SELECT_ROLES: "Select user role"
