--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.ru.yml
@@ -21,7 +21,8 @@ REGISTER: 'Зарегистрирован'
 
 DATA_GRID:
     USERS: "Пользователи"
-    EDIT_USER: "Редактирование пользователя"
+    EDIT_USER: "Изменить данные"
+    EDIT: "Сохранить"
     DELETE_USER: "Удалить пользователя"
     ENABLE_USER: "Активировать пользователя"
     DISABLE_USER: "Сделать пользователя неактивным"
