--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -22,6 +22,7 @@ REGISTER: 'Register'
 DATA_GRID:
     USERS: "Users"
     EDIT_USER: "Edit user"
+    EDIT: "Save"
     DELETE_USER: "Delete user"
     ENABLE_USER: "Enable user"
     DISABLE_USER: "Disable user"
