--- a/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/user.en.yml
@@ -19,7 +19,7 @@ ROLE: 'Role'
 LAST_LOGIN: 'Last login'
 REGISTER: 'Register'
 
-DATA_GRID:
+data_grid:
     USERS: "Users"
     EDIT_USER: "Edit user"
     EDIT: "Save"
