--- a/src/Araneum/Bundle/UserBundle/Resources/translations/validators.en.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/translations/validators.en.yml
@@ -1,1 +1,3 @@
 password_regex: Password must contain 1 lowercase letter, 1 uppercase letter, 1 digit, 1 special char and lenght must be 8 chars minimum
+email:
+    already_used: This email is already in use
