AC-302 Fix problems builders

--- a/app/Resources/translations/admin.en.yml
+++ b/app/Resources/translations/admin.en.yml
@@ -97,6 +97,7 @@ general:
     SURE: 'Are you sure?'
     CONFIRM_DELETE: 'Yes, delete it'
     CURRENT_URL_NOT_VALID: 'Current URL is not valid more'
+    LOADING: 'Loading...'
 datatables:
     PROCESSING: 'Processing...'
     SEARCH: 'Search:'
